# Manipulator

man_assembled/: CMakeLists.txt  package.xml  urdf.rviz
man_assembled/config/: joint_names_man_assembled.yaml  my_config.yaml
man_assembled/launch/: display.launch  gazebo.launch  joint_publish.launch  my_launch.launch
man_assembled/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
man_assembled/src/: joint_1.cpp  joint_2.cpp
man_assembled/urdf/: gazebo_refs.gazebo  joints.trans  man_assembled.urdf.xacro  rviz_config.rviz
